-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.4
-
None
Latest build of dev branches, GNOME 41.2 on wayland, Manjaro
********* Start testing of tst_QScreen ********* FAIL! : tst_QScreen::grabWindow(eDP-1 - Window) Compared values are not the same Actual (grabbedSize) : QSize(0x0) Expected (expectedGrabSize): QSize(400x400) Loc: [/home/liangqi/qt/qt5/qtbase/tests/auto/gui/kernel/qscreen/tst_qscreen.cpp(305)] FAIL! : tst_QScreen::grabWindow(eDP-1 - Window Section) Compared values are not the same Actual (grabbedSize) : QSize(0x0) Expected (expectedGrabSize): QSize(200x200) Loc: [/home/liangqi/qt/qt5/qtbase/tests/auto/gui/kernel/qscreen/tst_qscreen.cpp(305)] FAIL! : tst_QScreen::grabWindow(eDP-1 - Screen) Compared values are not the same Actual (grabbedSize) : QSize(0x0) Expected (expectedGrabSize): QSize(5760x3600) Loc: [/home/liangqi/qt/qt5/qtbase/tests/auto/gui/kernel/qscreen/tst_qscreen.cpp(305)] FAIL! : tst_QScreen::grabWindow(eDP-1 - Screen Section) Compared values are not the same Actual (grabbedSize) : QSize(0x0) Expected (expectedGrabSize): QSize(400x400) Loc: [/home/liangqi/qt/qt5/qtbase/tests/auto/gui/kernel/qscreen/tst_qscreen.cpp(305)] PASS : tst_QScreen::cleanupTestCase() Totals: 17 passed, 4 failed, 0 skipped, 0 blacklisted, 6110ms ********* Finished testing of tst_QScreen *********
- depends on
-
QTBUG-104595 tst_QScreen::grabWindow XWAYLAND fails with Ubuntu 22.04
-
- Closed
-
- is required for
-
QTQAINFRA-4698
Ubuntu 22.04 as Embedded Development Host
-
- Closed
-